Closed Bug 1428272 Opened 7 years ago Closed 7 years ago

Handle ExternalImage lock failure

Categories

(Core :: Graphics: WebRender, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file, 2 obsolete files)

It is already added to WebRender by https://github.com/servo/webrender/pull/1668 , but it is not used by gecko.
Assignee: nobody → sotaro.ikeda.g
See Also: → 1426193
Comment on attachment 8940087 [details] [diff] [review] patch - Handle ExternalImage lock failure Review of attachment 8940087 [details] [diff] [review]: ----------------------------------------------------------------- In failure cases, we return RawDataToWrExternalImage(nullptr, 0) in RenderBufferTextureHost::Lock and RenderSharedSurfaceTextureHost::Lock, and NativeTextureToWrExternalImage(0, 0, 0, 0, 0) in RenderDXGITextureHostOGL::Lock and RenderMacIOSurfaceTextureHostOGL::Lock. We may wish to switch to InvalidToWrExternalImage() instead to be consistent.
Thanks for the comment, I am going to update the patch.
Attachment #8940087 - Attachment is obsolete: true
Attachment #8941306 - Attachment is obsolete: true
Depends on: 1426193
See Also: 1426193
Blocks: 1426193
No longer depends on: 1426193
Attachment #8941741 - Flags: review?(nical.bugzilla)
Attachment #8941741 - Flags: review?(nical.bugzilla) → review+
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: