Bug 1428272 - Handle ExternalImage lock failure r=nical